# subc-llvm

./: .gitignore  CMakeLists.txt  README.md  ast.h  codegen.cc  codegen.h  diag.inc  diag_engine.cc  diag_engine.h  eval_constant.cc  eval_constant.h  lexer.cc  lexer.h  main.cc  parser.cc  parser.h  print_visitor.cc  print_visitor.h  scope.cc  scope.h  sema.cc  sema.h  type.cc  type.h
demo/: 2048.c  array.c  binary_err.c  cast.c  cast2.c  e1.c  e10.c  e11.c  e12.c  e13.c  e14.c  e15.c  e16.c  e18.c  e19.c  e2.c  e20.c  e21.c  e22.c  e23.c  e3.c  e4.c  e5.c  e6.c  e7.c  e8.c  e9.c  eval1.c  eval2.c  expr.txt  lisp.c  lisp.lisp  lispc.bc  maze.c  nqueen.c  test_struct_ret.c  typedef.c
doc/: ebnf.txt
script/: apple_m.sh  test.sh  ubuntu20_x86.sh
studybackend/: day01.c  day01.s
test/: CMakeLists.txt
test/codegen/: CMakeLists.txt  codegen_test.cc
test/lexer/: CMakeLists.txt  lexer_test.cc
test/parser/: CMakeLists.txt  parser_test.cc
